fixed overflows and colors

--- a/assets/css/styleview2.css
+++ b/assets/css/styleview2.css
@@ -187,7 +187,7 @@ th{
 }
 
 tr:hover {
-	background-color: #b1b9c6;
+	background-color: #c2d4d8;
 }
 
 td:first-child{
